# m9_ticket_system

./: .env.example  .gitignore  DESIGN.md  QUICKSTART.md  README.md  analytics_demo.py  database.py  docker-compose.yml  main.py  models.py  operation.py  pyproject.toml  seed.py
models/: main.py
src/: database.py  env.py  hybrid_operation.py  models.py  operation.py  redis.py  redis_operation.py  seed.py  snowflake.py
src/analytics/: __init__.py  analytics_loader.py  analytics_model.py  analytics_reports.py
src/models/: main.py
src/payments/: postgres_ops.py
src/tickets/: hybrid_ops.py  postgres_ops.py  redis_ops.py  ticket_cache.py  ticket_repository.py  ticket_schema.py  ticket_service.py  ticket_sync.py
src/users/: postgres_ops.py  user_repository.py  user_schema.py  user_service.py
test/: isolation_test.py  performance_test.py
test/tickets/: isolation_test.py  performance_test.py  test_isolation.py  test_service.py
test/users/: performance_test.py  test_service.py
